force-app/main/default/objects/Account/fields/Field_DevOps_test__c.field-meta.xml
<CustomField>
    <fullName>Field_DevOps_test__c</fullName>
    <description>Field DevOps test</description>
    <label>Field DevOps test</label>
    <length>55</length>
    <type>Text</type>
</CustomField>