force-app/main/default/objects/Account/fields/Nuevo_Test__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Test__c</fullName>
    <description>Nuevo campo para test</description>
    <label>Nuevo Test</label>
    <length>55</length>
    <type>Text</type>
</CustomField>