force-app/main/default/objects/Account/fields/Test_Sync__c.field-meta.xml
<CustomField>
    <fullName>Test_Sync__c</fullName>
    <label>Test_Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>