force-app/main/default/objects/Account/fields/TestDeploy__c.field-meta.xml
<CustomField>
    <fullName>TestDeploy__c</fullName>
    <label>TestDeploy</label>
    <length>56</length>
    <type>Text</type>
</CustomField>