force-app/main/default/objects/Account/fields/TestFran__c.field-meta.xml
<CustomField>
    <fullName>TestFran__c</fullName>
    <label>TestFran</label>
    <length>55</length>
    <type>Text</type>
</CustomField>