force-app/main/default/objects/Account/fields/TestWI_DevOps__c.field-meta.xml
<CustomField>
    <fullName>TestWI_DevOps__c</fullName>
    <label>TestWI_DevOps</label>
    <type>Email</type>
</CustomField>